Button fix on safari

--- a/assets/css/personal.css
+++ b/assets/css/personal.css
@@ -227,6 +227,7 @@ input[type="color"],
   color: #ffffff;
   border-radius: 0px;
   margin-top:37px;
+  margin-right: 5px;
 }
 
 .language-scrolled {
